# server/docs/swagger.json
@@ -175,7 +175,7 @@
                 }
             }
         },
-        "/lobbies/{id}": {
+        "/lobbies/id/{id}": {
             "get": {
                 "description": "Get a lobby from the database by ID",
                 "consumes": [
@@ -202,6 +202,42 @@
                         "description": "lobby data",
                         "schema": {
                             "$ref": "#/definitions/domain.Lobby"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/lobbies/latest": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "lobbies"
+                ],
+                "summary": "Get latest lobbies for user",
+                "responses": {
+                    "200": {
+                        "description": "lobby data",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/domain.Lobby"
+                            }
                         }
                     },
                     "400": {
@@ -681,6 +717,10 @@
         "domain.Tag": {
             "type": "object",
             "properties": {
+                "excluded": {
+                    "description": "Places with excluded tag wont be shown in swipes",
+                    "type": "boolean"
+                },
                 "icon": {
                     "type": "string"
                 },
